--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "axios": "^1.12.2",
     "gsap": "^3.13.0",
     "next": "16.0.0",
     "react": "19.2.0",
